Fixed Text visibility issue on DP

--- a/src/styles/global-theme.css
+++ b/src/styles/global-theme.css
@@ -1283,9 +1283,12 @@ body {
 }
 .table tbody td {
   padding: 12px;
-  color: white;
-  border-color: 1px solid rgba(255, 255, 255, 0.03);
+  color: black;
   border-top: 1px solid rgba(255, 255, 255, 0.03);
+}
+[data-theme="dark"] .table tbody td {
+  color: white;
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
 }
 
 .algo {
